--- a/awards/index.html
+++ b/awards/index.html
@@ -70,7 +70,7 @@
                     <hr>
                     <ul>
 
-                        <li style="margin-bottom: 20px"><img id="myImg0" src="./certificates/AAAI-2024-IAAI.jpg"
+                        <li style="margin-bottom: 20px"><img id="myImg0" src="./certificates/AAAI-IAAI-2024.jpeg"
                             alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
                             style="width:100%;max-width:100px;height:50px;">
                             In February 2024, our paper titled 'Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals' authored by Siva Likitha Valluru, 
