--- a/publications/index.html
+++ b/publications/index.html
@@ -128,6 +128,15 @@
                             <span class="tag tag-method">Neuro-Symbolic AI</span>
                             <br>
                     
+                        <li><b>From Cloud to Edge: Rethinking Generative AI for Low-Resource Design Challenges</b><br>
+                            <i>Artificial Intelligence for Design Problems Bridge Program at AAAI, 2024</i><br>
+                            Sai Krishna Revanth Vuruma, Ashley Margetts, Jianhai Su, Faez Ahmed, Biplav Srivastava<br>
+                            <a href='https://arxiv.org/abs/2402.12702' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">AI</span>
+                            <span class="tag tag-method">Design</span>
+                            <br>
+
                         <li><b>Plan-SOFAI: A Neuro-Symbolic Planning Architecture</b><br>
                             <i>Neuro-Symbolic Learning and Reasoning in the Era of Large Language Models (NuCLeaR) Workshop at AAAI, 2024</i><br>
                             Francesco Fabiano, Vishal Pallagani, Marianna Bergamaschi Ganapini, Lior Horesh, Andrea Loreggia, Keerthiram Murugesan, Francesca Rossi, Biplav Srivastava<br>
