--- a/publications/index.html
+++ b/publications/index.html
@@ -133,8 +133,7 @@
                             Sai Krishna Revanth Vuruma, Ashley Margetts, Jianhai Su, Faez Ahmed, Biplav Srivastava<br>
                             <a href='https://arxiv.org/abs/2402.12702' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Workshop</span>
-                            <span class="tag tag-method">AI</span>
-                            <span class="tag tag-method">Design</span>
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
                             <br>
 
                         <li><b>Plan-SOFAI: A Neuro-Symbolic Planning Architecture</b><br>
