--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -339,10 +339,28 @@
             <summary><b>Meal Recommendation</b></summary>
             <div class="content">
               <p style="text-align: justify;">
+              <h3><span style="background-color: aqua;"><b>Meal Recommendation</b></span></h3><br>
+              <i><b>Key Contacts: </b>
+                <a target="_blank" href="https://www.revathycv.com/">Vansh Nagpal</a>,
+                <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>,
+                <a target="_blank" href="https://www.linkedin.com/in/rushil-thareja-a80400179/">Rushil Thareja</a>,
+                <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav
+                  Srivastava</a>
+              </i><br>
+              </p>
+
+              <p align="justify"> We have observed that personal health can benefit from meals planned over a period, like a day or 3-days (travel), or a week. So, our idea is to build and evaluate a <span style="color:violet">personalized meal recommender system</span> to help healthy and people with a health condition, like diabetics, make optimized meals choices over a time period incorporating food restrictions, regional cuisine preferences, and balancing short- and long-term constraints to promote individual health and happiness. The Artificial Intelligence (AI) / Machine Learning (ML) aspects of the solution consist of using <span style="color:violet">novel knowledge graphs and group recommendation algorithms.</span> We will also perform a fairness evaluation of our algorithms, i.e., ensure that the recommended meal plans are not only useful to the user but also are not biased (stereotyped) towards any group of food items or user groups.</span>
+
+              </p>
+            </div>
+
+
+            <div class="content">
+              <p style="text-align: justify;">
               <h3><span style="background-color: aqua;"><b>Recipe Recommendation</b></span></h3><br>
               <i><b>Collaborators over the years: </b>
                 <a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>,
-                Vedant Khandelwal,
+                <a target="_blank" href="https://www.linkedin.com/in/khvedant/">Vedant Khandelwal</a>,
                 <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>,
                 <a target="_blank" href="https://www.revathycv.com/">Revathy Venkataramanan</a>,
                 <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav
@@ -353,7 +371,7 @@
                   Joshi</a>, <a target="_blank" href="https://saakur.github.io/">Sathyanarayanan N. Aakur</a>, <a
                   target="_blank" href="https://iitr.ac.in/~HS/Ram_Manohar_Singh">Ram Manohar Singh</a>
               </i><br>
-
+              </p>
 
               <p align="justify"> Cooking domain is a popular use-case to demonstrate decision-support (AI) capabilities
                 in service of benefits like precision health with tools ranging from information retrieval interfaces to
@@ -373,6 +391,7 @@
                 retrieval efficiency and new capabilities that were hither-to not possible in textual
                 representation.</span>
               </p>
+             
 
               <!--<script>
                 // Get the modal
@@ -396,7 +415,6 @@
                   modal.style.display = "none";
                 }
               </script>-->
-
 
 
               <p><i><b>Representative Publications</b></i></p>
