added RC ICAPS-24, changes to Home Page

--- a/publications/index.html
+++ b/publications/index.html
@@ -82,6 +82,15 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
+                        <li><b>Solving the Rubik's Cube with a PDDL Planner</b><br>
+                            <i>Proceedings of the 34th International Conference on Automated Planning and Scheduling (ICAPS) - Demonstration Track (ICAPS-24 Demo)</i><br>
+                            Bharath Muppasani, Vishal Pallagani, Biplav Srivastava<br>
+                            <a href='./papers_local/RC_ICAPS_24_Demo.pdf' target="_blank">[Paper]</a>
+                            <a href='https://youtu.be/YQZ2sj-x5js' target="_blank">[Video]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <br>
+
                         <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
                             <i>IEEE Transactions on Technology and Society</i><br>
                             Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
