--- a/projects/rubiks_cube/index.html
+++ b/projects/rubiks_cube/index.html
@@ -44,17 +44,17 @@
                   <p style="text-align: justify;"><span style="background-color: hsla(0, 62%, 77%, 0.835);"><b>Solving the Rubik’s Cube with a PDDL Planner</b></span><br>
                       <!-- <i><b>Collaborators: </b>AIISC - University of South Carolina, Tantiv4</i> -->
                       <!-- <br> -->
-                      <i><b>Authors: </b>Bharath Muppasani, Vishal Pallagani, Kausik Lakkaraju, Biplav Srivastava, Forest Agostinelli</i>
+                      <i><b>Authors: </b>Bharath Muppasani, Vishal Pallagani, Biplav Srivastava</i>
                       <br>
                     </p>
                     <p style="text-align: justify;">Rubik's Cube (RC) is a popular puzzle that is also computationally hard to solve. In this demonstration, we introduce the first PDDL formulation for the 3-dimensional RC and solve it with an off-the-shelf Fast-Downward planner. We also create a plan executor and visualizer to show how the plan achieves the intended goal. Our system has types of two audiences: (a) planning researchers who can explore a hard problem and improve their planning algorithms, and (b)  RC learners who want to learn how to solve the puzzle at their own pace and can now modify an initial plan (e.g., manually, using other algorithms) and see their execution.</p>
                   
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Solving the Rubik’s Cube with a PDDL Planner - <a href="papers/Rubik_s_Cube_IJCAI_Demo.pdf" target="_blank"><b>[Paper]</b></a>
+                    <li>Solving the Rubik’s Cube with a PDDL Planner (ICAPS-24 Demonstration Track) - <a href="../../publications/papers_local/RC_ICAPS_24_Demo.pdf" target="_blank"><b>[Paper]</b></a>
                       <!-- <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=4jmlBaYAAAAJ&citation_for_view=4jmlBaYAAAAJ:K4-iKlO5MD4C" target="_blank" type="text/plain"><b>[BibTex]</b></a> -->
                     </li>
-                    <li>Demonstration Video - <a href="https://www.youtube.com/watch?v=L90reK3_fk4&ab_channel=BharathChandra" target="_blank"><b>[Video]</b></a>
+                    <li>Demonstration Video - <a href='https://youtu.be/YQZ2sj-x5js' target="_blank"><b>[Video]</b></a>
                     </li>
                     <br>
                     <!-- <tr style="padding:0px">
@@ -63,7 +63,7 @@
                       </td>
                     </tr> -->
                     <div class="video-container" style="display: flex; justify-content: center;">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/L90reK3_fk4" title="Solving the Rubik’s Cube with a PDDL Planner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/YQZ2sj-x5js" title="Solving the Rubik’s Cube with a PDDL Planner" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>
                     
                   </ul>
