--- a/funding/index.html
+++ b/funding/index.html
@@ -27,6 +27,7 @@
                       <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
                       <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                       <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
+                      <a href='../patents/index.html'>Patents</a> &nbsp|&nbsp
                       <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                       <a href='../publications/index.html'>Publications</a>
                     </p>
