--- a/activities/index.html
+++ b/activities/index.html
@@ -25,6 +25,7 @@
                       <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
                       <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                       <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
+                      <a href='../patents/index.html'>Patents</a> &nbsp|&nbsp
                       <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                       <a href='../publications/index.html'>Publications</a>
                     </p>
