--- a/publications/index.html
+++ b/publications/index.html
@@ -91,7 +91,7 @@
                             <br>
 
                         <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
-                            <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
+                            <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i>(AR=31%)<br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
                             <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf' target="_blank">[Paper]</a>
                             <a href="./papers_local/AAAI-IAAI-2024-ULTRA-Poster.pdf" target="_blank">[Poster]</a>
@@ -112,7 +112,7 @@
                         </li>
                             
                         <li><b>ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals</b><br>
-                            <i>Proceedings of the 7th Joint International Conference on Data Science & Management of Data (CODS-COMAD) Demonstration Track, 2024</i><br>
+                            <i>Proceedings of the 7th Joint International Conference on Data Science & Management of Data (CODS-COMAD) Demonstration Track, 2024</i>(AR=50%)<br>
                             Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sugata Gangopadhyay<br>
                              <a href='https://dl.acm.org/doi/10.1145/3632410.3632503' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Demo</span>
