added impact factor

--- a/publications/index.html
+++ b/publications/index.html
@@ -93,7 +93,7 @@
                             <br>
 
                         <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
-                            <i>IEEE Transactions on Technology and Society</i><br>
+                            <i>IEEE Transactions on Technology and Society [Impact Factor: 5.2]</i><br>
                             Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
                             <a href='https://ieeexplore.ieee.org/document/10466637' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Journal</span>
