--- a/publications/index.html
+++ b/publications/index.html
@@ -93,7 +93,7 @@
                             <br>
 
                         <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
-                            <i>IEEE Transactions on Technology and Society [Impact Factor: 5.2]</i><br>
+                            <i>IEEE Transactions on Technology and Society (IF=5.2)</i><br>
                             Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
                             <a href='https://ieeexplore.ieee.org/document/10466637' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Journal</span>
@@ -300,9 +300,9 @@
                             <br>
 
                         <li><b>Advances in Automatically Rating the Trustworthiness of Text Processing Services</b><br>
-                            <i>AAAI Spring Symposium 2023</i><br>
+                            <i>AAAI Spring Symposium 2023 (IF=2)</i><br>
                             Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta<br>
-                            <a href='https://arxiv.org/pdf/2302.09079.pdf' target="_blank">[Paper]</a>
+                            <a href='https://link.springer.com/article/10.1007/s43681-023-00391-5' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
