--- a/publications/index.html
+++ b/publications/index.html
@@ -300,7 +300,7 @@
                             <br>
 
                         <li><b>Advances in Automatically Rating the Trustworthiness of Text Processing Services</b><br>
-                            <i>AAAI Spring Symposium 2023 (IF=2)</i><br>
+                            <i>AI Ethics (Springer Nature), 2023 (IF=2); Also in AAAI Spring Symposium on AI Trustworthiness Assessment, San Francisco, 2023</i><br>
                             Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta<br>
                             <a href='https://link.springer.com/article/10.1007/s43681-023-00391-5' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
