--- a/publications/index.html
+++ b/publications/index.html
@@ -303,7 +303,7 @@
                             <i>AI Ethics (Springer Nature), 2023 (IF=2); Also in AAAI Spring Symposium on AI Trustworthiness Assessment, San Francisco, 2023</i><br>
                             Biplav Srivastava, Kausik Lakkaraju, Mariana Bernagozzi, Marco Valtorta<br>
                             <a href='https://link.springer.com/article/10.1007/s43681-023-00391-5' target="_blank">[Paper]</a>
-                            <span class="tag tag-type">Conference</span>
+                            <span class="tag tag-type">Journal</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
 
