--- a/demos/index.html
+++ b/demos/index.html
@@ -58,7 +58,7 @@
            <iframe width="300" height="200" src="https://www.youtube.com/embed/YQZ2sj-x5js" title="Solving the Rubik's Cube" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
            </div>
            <div style="flex:1">
-             <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner<span class="tag tag-method">Neural-Symbolic AI</span></h3>
+             <h3 class="card-text">Solving the Rubik's Cube with a PDDL Planner | ICAPS-24 <span class="tag tag-method">Neural-Symbolic AI</span></h3>
              <p>In this demonstration, we introduce the first PDDL formulation for the 3-dimension RC and solve it with an off-the-shelf Fast-Downward planner. We also create a plan executor and visualizer to show how the plan achieves the intended goal.</p>
              <a href="../publications/papers_local/RC_ICAPS_24_Demo.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>
              <!-- <a href="../projects/rubiks_cube/bib/rubiks-pddl.txt" target="_blank" type="text/plain">[BibTex]</a>  -->
@@ -76,7 +76,7 @@
               allowfullscreen></iframe>
           </div>
           <div style="flex:1">
-            <h3 class="card-text">Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning<span class="tag tag-method">Automated Planning</span></h3>
+            <h3 class="card-text">Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning | AAAI-24<span class="tag tag-method">Automated Planning</span></h3>
             <p>We present a demonstration of integrating Automated Planning with opinion dynamics, enabling users to visualize, simulate, and strategically influence opinion evolution in networks. This approach offers a practical solution for understanding and guiding information spread.</p>
             <a href="../publications/papers_local/InfoSpread_AAAI24_Demo.pdf" target="_blank"
               rel="noopener noreferrer">[Paper]</a>
