--- a/demos/index.html
+++ b/demos/index.html
@@ -137,7 +137,7 @@
           </div>
           <div style="flex:1">
             <h3 class="card-text">PRUDENT: A Generic Dialog Agent for Information Retrieval Based on Automated Planning
-              Within a Reinforcement Learning Platform <span class="tag tag-method">Automated Planning</span></h3>
+              Within a Reinforcement Learning Platform | ICAPS 2021<span class="tag tag-method">Automated Planning</span></h3>
             <p>We present a generic approach for dialogs for information retrieval based on automated planning within a
               reinforcement learning (RL)-based platform, ParlAI.</p>
             <a href="https://prl-theworkshop.github.io/prl2021/papers/PRL2021_paper_28.pdf" target="_blank"
