--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -51,6 +51,14 @@
               <div class="newsjournal-year">2024</div>
             </div>
 
+            <div class="newsjournal-item">
+              <!-- March 2024 -->
+              <div class="newsjournal-month">January</div>
+              <div class="newsjournal-content">
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://cse.sc.edu/event/cse-research-symposium-2024">CSE Research Symposium</a> on March 15th.</p>
+              </div>
+            </div>
+
             <!-- February 2024 -->
             <div class="newsjournal-item">
               <div class="timeline-dot"></div>
