updated main homepage news

--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                       <div class="timeline-date year">2024</div>
                     </div>
 
-                    <!-- March 2024 -->
+                    <!-- April 2024 -->
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
-                      <div class="timeline-date month">March</div>
+                      <div class="timeline-date month">April</div>
                       <div class="timeline-content">
-                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://cse.sc.edu/event/cse-research-symposium-2024">CSE Research Symposium</a> on March 15th.</p>
+                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover USC event</a> on April 19th.</p>
                       </div>
                     </div>
 
