changed wording on news log

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">April</div>
                       <div class="timeline-content">
-                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover USC event</a> on April 19th.</p>
+                        <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover USC</a> event on April 19th.</p>
                       </div>
                     </div>
 
