--- a/demos/index.html
+++ b/demos/index.html
@@ -159,7 +159,7 @@
           </div>
           <div style="flex:1">
             <h3 class="card-text">ALLURE: A Multi-modal Guided Environment for Helping Children Learn to Solve a Rubik’s
-              Cube<span class="tag tag-method">Neuro-Symbolic AI</span></h3>
+              Cube | AAAI-22 <span class="tag tag-method">Neuro-Symbolic AI</span></h3>
             <p>We demonstrate ALLURE, an educational AI system for learning to solve the Rubik’s cube that is designed
               to help students improve their problem solving skills.</p>
             <a href="https://ojs.aaai.org/index.php/AAAI/article/view/21722" target="_blank"
