--- a/publications/index.html
+++ b/publications/index.html
@@ -83,6 +83,14 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
+                        <li><b>The Case for Developing a Foundation Model for Planning-like Tasks from Scratch</b><br>
+                            <i>Planning and Reinforcement Learning (PRL) Workshop at ICAPS 2024</i><br>
+                            Biplav Srivastava, Vishal Pallagani<br>
+                            <a href='https://openreview.net/pdf?id=jxsnASl4fX' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <br>
+                        
                         <li><b>Solving the Rubik's Cube with a PDDL Planner</b><br>
                             <i>Proceedings of the 34th International Conference on Automated Planning and Scheduling (ICAPS) - Demonstration Track (ICAPS-24 Demo)</i><br>
                             Bharath Muppasani, Vishal Pallagani, Biplav Srivastava<br>
