--- a/awards/index.html
+++ b/awards/index.html
@@ -133,7 +133,7 @@
 
                       <h2>Recognitions</h2>
                       <li style="margin-bottom: 20px">In February 2024, Vishal Pallagani got elected to the <a href="https://aaai.org/about-aaai/aaai-officers-and-committees/">Student Committee of AAAI - the International Association for the Advancement of Artificial Intelligence.</a></li>
-                      <li style="margin-bottom: 20px">In February 2024, we lead in PI role University of South Carolina's participation in National Institute of Standards and Technology (<a href="https://www.nist.gov/">NIST</a>)'s Artificial Intelligence Safety Institute Consortium (AISIC) where we are contributing to many task groups [<a href="https://www.nist.gov/aisi">announcement</a>, <a href="https://www.nist.gov/artificial-intelligence-safety-institute/aisic-members">members</a>]</li>
+                      <li style="margin-bottom: 20px">In February 2024, we lead in PI role University of South Carolina's participation in National Institute of Standards and Technology (<a href="https://www.nist.gov/">NIST</a>)'s Artificial Intelligence Safety Institute Consortium (AISIC) where we are contributing to many task groups [<a href="https://www.nist.gov/aisi">announcement</a>, <a href="https://www.nist.gov/artificial-intelligence-safety-institute/aisic-members">members</a>].</li>
 
                     </ul>
 
