--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -53,6 +53,8 @@
                       <i>The 34th International Conference on Automated Planning and Scheduling (ICAPS), 2024</i> <br>
                       <a href="https://arxiv.org/abs/2401.02500" target="_blank"><b>[Paper]</b></a>
                       <a href="./bib/position.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                      <a href="https://ai4society.github.io/LLM-Planning-Viz/" target="_blank" type="text/plain"><b>[Visualization Tool]</b></a>
+                      <a href="https://github.com/ai4society/LLM-Planning-Viz" target="_blank" type="text/plain"><b>[Github]</b></a>
                     </li>
                     <li>Understanding the Capabilities of Large Language Models for Automated Planning <br> 
                       <i>Preprint</i> <br>
