--- a/publications/index.html
+++ b/publications/index.html
@@ -83,6 +83,14 @@
                     <h2>2024</h2>
                     <ul class="papers-list">
 
+                        <li><b>Comparing Rubik's Cube Solvability in Domain-Independent Planners Using Standard Planning Representations for Insights and Synergy with Upcoming Learning Methods</b><br>
+                            <i>Heuristics and Search for Domain-Independent Planning (HSDIP) Workshop at ICAPS 2024</i><br>
+                            Bharath Muppasani, Vishal Pallagani, Biplav Srivastava, Forest Agostinelli<br>
+                            <a href='./papers_local/Rubik_s_Cube___HSDIP_camera_submission.pdf' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Workshop</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <br>
+
                         <li><b>The Case for Developing a Foundation Model for Planning-like Tasks from Scratch</b><br>
                             <i>Planning and Reinforcement Learning (PRL) Workshop at ICAPS 2024</i><br>
                             Biplav Srivastava, Vishal Pallagani<br>
