--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -51,6 +51,15 @@
               <div class="newsjournal-year">2024</div>
             </div>
 
+            <!-- April 2024 -->
+            <div class="newsjournal-item">
+              <!-- March 2024 -->
+              <div class="newsjournal-month">April</div>
+              <div class="newsjournal-content">
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover USC</a> event on April 19th.</p>
+              </div>
+            </div>
+
             <div class="newsjournal-item">
               <!-- March 2024 -->
               <div class="newsjournal-month">March</div>
