added May 2024 updates

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
                       <div class="timeline-content">
                         <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the International Conference on Automated Planning and Scheduling <a href="https://icaps24.icaps-conference.org/">(ICAPS)</a> from June 1st to June 7th.
                         <ul>
+                          <li> 
+                            A position paper on <a href="https://arxiv.org/abs/2401.02500" target="_blank">'On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)'</a>
+                          </li>
+
                           <li>A paper on <a
                             href="https://openreview.net/pdf?id=jxsnASl4fX"
                             target="_blank">'The Case for Developing a Foundation Model for Planning-like Tasks from Scratch'</a>. at Planning and Reinforcement Learning <a href="https://icaps24.icaps-conference.org/program/workshops/prl/" target="_blank">(PRL)</a> Workshop</li>
