--- a/publications/index.html
+++ b/publications/index.html
@@ -146,7 +146,7 @@
                             <br>
 
                         <li><b>On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)</b><br>
-                            <i>Proceedings of the 34th International Conference on Automated Planning and Scheduling (ICAPS), 2024</i><br>
+                            <i>Proceedings of the 34th International Conference on Automated Planning and Scheduling (ICAPS), 2024 (AR =  21.64%)</i><br>
                             Vishal Pallagani, Bharath Muppasani, Kaushik Roy, Francesco Fabiano, Andrea Loreggia, Keerthiram Murugesan, Biplav Srivastava, Francesca Rossi, Lior Horesh, Amit Sheth<br>
                             <a href='https://arxiv.org/abs/2401.02500' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Preprint</span>
