--- a/publications/index.html
+++ b/publications/index.html
@@ -94,7 +94,7 @@
                         <li><b>The Case for Developing a Foundation Model for Planning-like Tasks from Scratch</b><br>
                             <i>Planning and Reinforcement Learning (PRL) Workshop at ICAPS 2024</i><br>
                             Biplav Srivastava, Vishal Pallagani<br>
-                            <a href='https://openreview.net/pdf?id=jxsnASl4fX' target="_blank">[Paper]</a>
+                            <a href='https://arxiv.org/abs/2404.04540' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Workshop</span>
                             <span class="tag tag-method">Automated Planning</span>
                             <br>
