--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">May</div>
                       <div class="timeline-content">
+                         <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> started his summer internship at IBM Research, where he will be working on selective state space models and sequential decision making.</p>
                         <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the International Conference on Automated Planning and Scheduling <a href="https://icaps24.icaps-conference.org/">(ICAPS)</a> from June 1st to June 7th.
                         <ul>
                           <li> 
