--- a/members/index.html
+++ b/members/index.html
@@ -123,6 +123,7 @@
                             <br><br>
                         </figcaption>
 
+                        <!-- Commented
                         <img src="images_members/rushil.jpg">
                         <figcaption style="padding-top: -10%;">
                             <b>Rushil Thareja</b><br><br>
@@ -135,6 +136,7 @@
                             <span class="tag tag-method">Chatbots</span>
                             <br><br>
                         </figcaption>
+                        -->
 
                         <img src="images_members/likitha.png">
                         <figcaption style="padding-top: -10%;">
