--- a/members/index.html
+++ b/members/index.html
@@ -153,32 +153,7 @@
                 </td>
             </tr>
 
-            <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <h2>Masters Students</h2>
-                    <div class="grid">
-                        <img src="images_members/sai.jpg">
-                        <figcaption style="padding-top: -10%;">
-                            <b>Sai Krishna Revanth Vuruma</b><br><br>
-                            <a target="_blank"
-                                href="https://www.linkedin.com/in/sai-krishna-revanth-vuruma/?originalSubdomain=in">Homepage</a>,
-                            <a target="_blank" href="mailto:svuruma@email.sc.edu">svuruma@email.sc.edu</a>
-                            <br><br>
-                            Research Interests:
-                            <span class="tag tag-method">Trust Rating</span>
-                            <br><br>
-                            Domains:
-                            <span class="tag tag-domain">Finance</span>
-                            <br><br>
-                        </figcaption>
 
-                        <!--Leave this in as placeholder.-->
-                        <figcaption style="padding-top: -10%;">
-                            &nbsp
-                        </figcaption>
-
-                </td>
-            </tr>
 
             <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
@@ -196,6 +171,33 @@
                             <br><br>
                             Domains:
                             <span class="tag tag-domain">Elections</span>
+                            <br><br>
+                        </figcaption>
+
+                        <!--Leave this in as placeholder.-->
+                        <figcaption style="padding-top: -10%;">
+                            &nbsp
+                        </figcaption>
+
+                </td>
+            </tr>
+
+                        <tr style="padding:0px">
+                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                    <h2>Adjucnt Students</h2>
+                    <div class="grid">
+                        <img src="images_members/sai.jpg">
+                        <figcaption style="padding-top: -10%;">
+                            <b>Sai Krishna Revanth Vuruma</b><br><br>
+                            <a target="_blank"
+                                href="https://www.linkedin.com/in/sai-krishna-revanth-vuruma/?originalSubdomain=in">Homepage</a>,
+                            <a target="_blank" href="mailto:svuruma@email.sc.edu">svuruma@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br><br>
+                            Domains:
+                            <span class="tag tag-domain">Finance</span>
                             <br><br>
                         </figcaption>
 
