--- a/members/index.html
+++ b/members/index.html
@@ -184,7 +184,7 @@
 
                         <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                    <h2>Adjucnt Students</h2>
+                    <h2>Adjunct Students</h2>
                     <div class="grid">
                         <img src="images_members/sai.jpg">
                         <figcaption style="padding-top: -10%;">
