--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -68,36 +68,38 @@
             Trustworthy Group Recommendation
           </h1>
 
-      <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><img id="myImg0" src="images/ultra_award.jpeg"
-            alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
-            style="width:100%;max-width:100px;height:50px;">
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><img id="myImg0"
+              src="images/ultra_award.jpeg"
+              alt="🎉 2024 IAAI Deployed Application Award for our AI application, <i>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</i> 🎉"
+              style="width:100%;max-width:100px;height:50px;">
             <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://arxiv.org/abs/2309.09404">paper</a>
             that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
-                href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
-                style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and received the <span
-                style="color:violet"><i>Deployed Application</i></span> award <i>(can be enlarged)</i>.<br><br>
+              href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
+              style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and received the <span
+              style="color:violet"><i>Deployed Application</i></span> award <i>(can be enlarged)</i>.<br><br>
 
-            <div id="myModal" class="modal">
-              <span class="close">&times;</span>
-              <img class="modal-content" id="img01">
-              <div id="caption"></div>
-            </div>
+          <div id="myModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="img01">
+            <div id="caption"></div>
+          </div>
 
-            <script>
-              // Call the function with your specific IDs and class
-              setupModal("myImg0", "myModal", "img01", "caption", "close");
-            </script>
-        </p>
-        
-        <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
-            <mark style="color:red;"><b>NEW!</b></mark> Our <a href="https://dl.acm.org/doi/10.1145/3632410.3632503">demo
-                paper</a> about deploying <a
-                href="https://ai4society.github.io/projects/teaming/index.html#:~:text=We%20introduce%20ULTRA,others%20can%20use.">ULTRA</a>
+          <script>
+            // Call the function with your specific IDs and class
+            setupModal("myImg0", "myModal", "img01", "caption", "close");
+          </script>
+          </p>
+
+          <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;">
+            <mark style="color:red;"><b>NEW!</b></mark> Our <a
+              href="https://dl.acm.org/doi/10.1145/3632410.3632503">demo
+              paper</a> about deploying <a
+              href="https://ai4society.github.io/projects/teaming/index.html#:~:text=We%20introduce%20ULTRA,others%20can%20use.">ULTRA</a>
             in two geographical regions of the world has been accepted to <a
-                href="https://cods-comad.in/call-for-demo-track-papers.php"
-                style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.
-        </p>
-  
+              href="https://cods-comad.in/call-for-demo-track-papers.php"
+              style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.
+          </p>
+
           <hr>
 
           <details open>
@@ -344,12 +346,22 @@
                 <a target="_blank" href="https://www.revathycv.com/">Vansh Nagpal</a>,
                 <a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a>,
                 <a target="_blank" href="https://www.linkedin.com/in/rushil-thareja-a80400179/">Rushil Thareja</a>,
-                <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav
+                <a target="_blank" href="https://www.linkedin.com/in/likitha9/">Siva Likitha Valluru</a>, <a
+                  target="_blank" href="https://sites.google.com/site/biplavsrivastava/about-biplav?authuser=0">Biplav
                   Srivastava</a>
               </i><br>
               </p>
 
-              <p align="justify"> We have observed that personal health can benefit from meals planned over a period, like a day or 3-days (travel), or a week. So, our idea is to build and evaluate a <span style="color:violet">personalized meal recommender system</span> to help healthy and people with a health condition, like diabetics, make optimized meals choices over a time period incorporating food restrictions, regional cuisine preferences, and balancing short- and long-term constraints to promote individual health and happiness. The Artificial Intelligence (AI) / Machine Learning (ML) aspects of the solution consist of using <span style="color:violet">novel knowledge graphs and group recommendation algorithms.</span> We will also perform a fairness evaluation of our algorithms, i.e., ensure that the recommended meal plans are not only useful to the user but also are not biased (stereotyped) towards any group of food items or user groups.</span>
+              <p align="justify"> We have observed that personal health can benefit from meals planned over a period,
+                like a day or 3-days (travel), or a week. So, our idea is to build and evaluate a <span
+                  style="color:violet">personalized meal recommender system</span> to help healthy and people with a
+                health condition, like diabetics, make optimized meals choices over a time period incorporating food
+                restrictions, regional cuisine preferences, and balancing short- and long-term constraints to promote
+                individual health and happiness. The Artificial Intelligence (AI) / Machine Learning (ML) aspects of the
+                solution consist of using <span style="color:violet">novel knowledge graphs and group recommendation
+                  algorithms.</span> We will also perform a fairness evaluation of our algorithms, i.e., ensure that the
+                recommended meal plans are not only useful to the user but also are not biased (stereotyped) towards any
+                group of food items or user groups.</span>
 
               </p>
             </div>
@@ -391,7 +403,7 @@
                 retrieval efficiency and new capabilities that were hither-to not possible in textual
                 representation.</span>
               </p>
-             
+
 
               <!--<script>
                 // Get the modal
@@ -419,6 +431,14 @@
 
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li>[2024] BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group Recommendations and
+                  Reasoning on Multimodal Recipes<br>
+                  <i>Arxiv Preprint</i><br>
+                  <a href="https://arxiv.org/abs/2406.13714" target="_blank"><b>[Paper]</b></a>
+                  <a href="./bib/beacon.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <br>
+                </li>
+                <br>
                 <li>[2022] Learning About People’s Attitude Towards Food Available in India and Its Implications for
                   Fair AI-based Systems <br>
                   <i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
