--- a/publications/index.html
+++ b/publications/index.html
@@ -84,15 +84,15 @@
                         <ul class="papers-list">
 
                             <li><b>BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group
-                                    Recommendations and Reasoning on Multimodal Recipes
-                                    </i><br>
-                                    Vansh Nagpal, Siva Likitha Valluru, Kausik Lakkaraju, Biplav Srivastava
-                                    <br>
-                                    <a href='https://arxiv.org/abs/2406.13714' target="_blank">[Paper]</a>
-                                    <span class="tag tag-type">Preprint</span>
-                                    <span class="tag tag-method">Data Analysis</span>
-                                    <span class="tag tag-method">Recommender Systems</span>
-                                    <br>
+                                    Recommendations and Reasoning on Multimodal Recipes</b>
+                                </i><br>
+                                Vansh Nagpal, Siva Likitha Valluru, Kausik Lakkaraju, Biplav Srivastava
+                                <br>
+                                <a href='https://arxiv.org/abs/2406.13714' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Data Analysis</span>
+                                <span class="tag tag-method">Recommender Systems</span>
+                                <br>
 
                             <li><b>Comparing Rubik's Cube Solvability in Domain-Independent Planners Using Standard
                                     Planning Representations for Insights and Synergy with Upcoming Learning
