--- a/publications/index.html
+++ b/publications/index.html
@@ -147,8 +147,7 @@
                                 <span class="best-demo-badge">Deployed Application Award at AAAI/IAAI-24</span>
                                 <br>
 
-                            <li>
-                                <b>Expressive and Flexible Simulation of Information Spread Strategies in Social
+                            <li><b>Expressive and Flexible Simulation of Information Spread Strategies in Social
                                     Networks Using Planning</b><br>
                                 <i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of
                                     Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
