--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -364,6 +364,17 @@
                 group of food items or user groups.</span>
 
               </p>
+              <p><i><b>Representative Publications</b></i></p>
+              <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li>[2024] BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group Recommendations and
+                  Reasoning on Multimodal Recipes<br>
+                  <i>Arxiv Preprint</i><br>
+                  <a href="https://arxiv.org/abs/2406.13714" target="_blank"><b>[Paper]</b></a>
+                  <a href="./bib/beacon.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <br>
+                </li>
+                <br>
+              </ul>
             </div>
 
 
@@ -431,24 +442,6 @@
 
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
-                <li>[2024] BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group Recommendations and
-                  Reasoning on Multimodal Recipes<br>
-                  <i>Arxiv Preprint</i><br>
-                  <a href="https://arxiv.org/abs/2406.13714" target="_blank"><b>[Paper]</b></a>
-                  <a href="./bib/beacon.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-                  <br>
-                </li>
-                <br>
-                <li>[2022] Learning About People’s Attitude Towards Food Available in India and Its Implications for
-                  Fair AI-based Systems <br>
-                  <i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
-                  <a href="https://www.researchgate.net/publication/363607753_Learning_About_People%27s_Attitude_Towards_Food_Available_in_India_and_Its_Implications_for_Fair_AI-based_Systems"
-                    target="_blank"><b>[Paper]</b></a>
-                  <a href="https://github.com/uyadav212/FAMPS_DataAndAnalytics"><b>[GitHub]</b></a>
-                  <a href="./bib/food-in-india.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-                  <br>
-                </li>
-                <br>
                 <li>[2022] A Rich Recipe Representation as Plan to Support Expressive Multi-Modal Queries
                   on Recipe Content and Preparation Process
                   <br><i>Workshop on Knowledge Engineering for Planning and Scheduling (KEPS), International Conference
