--- a/publications/index.html
+++ b/publications/index.html
@@ -253,6 +253,8 @@
                                 Biplav Srivastava<br>
                                 <a href='https://dl.acm.org/doi/fullHtml/10.1145/3604237.3626867'
                                     target="_blank">[Paper]</a>
+                                <a href='./presentations/ICAIF2023_KL_Pres.pdf'
+                                    target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Chatbots</span>
                                 <span class="tag tag-domain">Finance</span>
@@ -264,6 +266,8 @@
                                     Systems, and Applications: IEEE TPS'23, Atlanta, 2023</i><br>
                                 Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta, Dezhi Wu<br>
                                 <a href='./papers_local/M_SAS_Final_IEEE.pdf' target="_blank">[Paper]</a>
+                                <a href='./presentations/IEEETPS2023_KL_Pres.pdf'
+                                target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
@@ -398,6 +402,8 @@
                                 Kausik Lakkaraju, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath Muppasani,
                                 Biplav Srivastava<br>
                                 <a href='https://arxiv.org/abs/2307.07422' target="_blank">[Paper]</a>
+                                <a href='./presentations/FinPlan2023_KL_Pres.pdf'
+                                target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Workshop</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <span class="tag tag-domain">Finance</span>
@@ -436,6 +442,8 @@
                                 <i>Conference on Artificial Intelligence, Ethics and Society (AIES) 2022</i><br>
                                 Kausik Lakkaraju<br>
                                 <a href='https://dl.acm.org/doi/10.1145/3514094.3539556' target="_blank">[Paper]</a>
+                                <a href='./presentations/AIES2022_KL_Pres.pdf'
+                                target="_blank">[Slides]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Trust Rating</span>
                                 <br>
